--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
 <body>
   <div align="center">
     <h1>Congratulations!!! </h1>
+      <h2>欢迎来到吕蕴偲Kevin LYU的AWS课堂</h2>
       <h2>Welcome to 吕蕴偲 Kevin LYU's AWS class</h2>
     <h3>This web was deployed using AWS CodeDeploy.</h3>
-    <p>Welcome to follow me, blibili <a href="https://space.bilibili.com/190926209">https://space.bilibili.com/190926209</a> or YouTube<a href="https://www.youtube.com/@LYU_KEVIN">https://www.youtube.com/@LYU_KEVIN</a></p>
+    <h3>欢迎关注我的b站账号<a href="https://space.bilibili.com/190926209">https://space.bilibili.com/190926209</a> 以及YouTube账号<a href="https://www.youtube.com/@LYU_KEVIN">https://www.youtube.com/@LYU_KEVIN</a></h3>
+    <p>Welcome to follow me and subscribe to my channel! blibili <a href="https://space.bilibili.com/190926209">https://space.bilibili.com/190926209</a> or YouTube<a href="https://www.youtube.com/@LYU_KEVIN">https://www.youtube.com/@LYU_KEVIN</a></p>
+    <h3>与我联系Contact me Email: lin909958300@yeah.net</h3>
   </div>
 </body>
 </html>
